Fix calendar meta button.

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,1 +1,1 @@
-.zoom-group-calendar { background: #007CFF !important; cursor: pointer; }
+.single-item.groups .zoom-group-calendar { background: #007CFF !important; cursor: pointer; }
