Implement calendar event in group admin setting.

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,2 +1,3 @@
 .single-item.groups .zoom-group-calendar { background: #007CFF !important; cursor: pointer; color: white; }
 .single-item.groups .bp-group-meta.bp-group-type { display: flex; }
+#bp-group-edit-calendar-group-event-submit-wrapper { text-align: center; }
